Bug 603550 - No longer auto-capturing mouse move events on the content window / dragging an jQuery UI draggable element does not work correctly when mouse moves outside the window, r=roc, a=blocking